k8s/overlay/bar/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment
spec:
  template:
    spec:
      containers:
      - name: echo
        args: ["-text=bar"]
